# sfml_pratice

./: CMakeLists.txt
src/: main.cpp
src/engine/: Application.cpp  Application.hpp  Scene.hpp
src/scenes/: TestScene.cpp  TestScene.hpp
